# my_cmm

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  constrained_decoding.py  json_loader.py  json_loadr.py
src/model/: functions_definition.py  prompt.py
